src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTTextureBufferObject_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTTextureBufferObject_StringErrorContext.class */
public final class EXTTextureBufferObject_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexBufferEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/EXTTextureBufferObjectErrorContext");
        return methods;
    }
}
